Fri Aug 27 15:01:41 UTC 2010  Steve Huston  <shuston@riverace.com>

        * Connector.{h cpp} (ACE_NonBlocking_Connect_Handler): Add a
          handle_close() which calls handle_input() if called by the
          ACE_Dev_Poll_Reactor to remove a failed connect. Apparently,
          Linux epoll, at least sometimes, signals EPOLLERR on a failed
          nonblocking connect, unlike the select() case which selects the
          failed fd for read. Thanks to Kannan Ramaswamy <kannan dot
          ramaswamy at cogcap dot com> for this information and fix.

        * THANKS: Added Kannan to the Hall of Fame.

Fri Aug 27 14:17:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
          Doxygen changes

        * ace/OS_NS_Thread.cpp:
          Use ACE_GUARD

        * bin/fuzz.pl:
          Added check for ACE_Guard

Fri Aug 27 06:56:11 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/acexml.doxygen:
          Fuzz fixes

Thu Aug 26 13:20:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Added DANCE_ROOT

Thu Aug 26 13:08:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/servers/servers.mpc:
          Use ace_netsvcs as executable name, this makes more sense when
          we install this file in a target directory

Thu Aug 26 13:04:06 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Check doxygen files for tabs

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
        * html/index.html:
          Changed documentation subdirectories to make debian packaging easier

Thu Aug 26 12:30:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/control:
          Made some fixes for x.8.1
